# SkillSync_Contract

./: .env.example  .gitignore  BUILD_CONFIG.md  Cargo.toml  DOCUMENTATION_INDEX.md  Distro.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  Makefile  PR_MESSAGE.md  README.md  RELEASE.md  RELEASE_AUTH_ARCHITECTURE.md  RELEASE_AUTH_CHECKLIST.md  RELEASE_AUTH_IMPLEMENTATION_COMPLETE.md  RELEASE_AUTH_QUICK_REFERENCE.md  RELEASE_AUTH_SUMMARY.md  SOROBAN.md  SOROBAN_CONFIG_SUMMARY.md  SOROBAN_CONFIG_TECHNICAL.md  STAKE_ARCHITECTURE.md  STAKE_CONTRACT_SUMMARY.md  STAKE_QUICK_REFERENCE.md  STAKE_USAGE_EXAMPLES.md  TEST_IMPLEMENTATION.md  old_lib.rs  soroban.toml
.github/workflows/: ci.yml  release.yml
api/: jest.config.js
api/src/: app.module.ts  main.ts
api/test/: jest.setup.ts
contracts/: .tool-versions  Cargo.toml  Scarb.toml  build.sh
contracts/audit_log/: Cargo.toml
contracts/common_events/: Cargo.toml
contracts/dispute/: Cargo.toml
contracts/fee_split/: Cargo.toml
contracts/fee_split/src/: lib.rs  tests.rs
contracts/fee_split/test_snapshots/tests/: admin_only_updates_are_enforced.1.json  emits_events_for_updates_and_splits.1.json  nonce_must_increment.1.json  nonces_are_per_address.1.json  release_sends_fee_to_treasury.1.json  release_with_full_fee_sends_all_to_treasury.1.json  release_with_zero_fee_sends_all_to_mentor.1.json  replay_attack_rejected.1.json  split_handles_large_amounts.1.json  split_math_edges_and_midpoint.1.json  split_rounds_down_and_assigns_remainder_to_fee.1.json
contracts/release_auth/: Cargo.toml  README.md
contracts/reputation/: Cargo.toml  README.md
contracts/withdrawal/: Cargo.toml
contracts/withdrawal/src/: lib.rs  tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: config.rs  lib.rs  main.rs
drips/: Cargo.toml
patches/: core_test_with_patch.txt  stellar-xdr-20.1.0.crate
patches/stellar-xdr/: Cargo.toml
patches/stellar-xdr/src/: lib.rs
skillsync_app/: .gitignore  Cargo.toml
src/: lib.rs  reputation.rs  storage.rs
(+75 files in other folders)
