[package]
name = "fee_split"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.4.0"

[dev-dependencies]
soroban-sdk = { version = "20.4.0", features = ["testutils"] }
derive_arbitrary = "=1.3.2"

[features]
testutils = ["soroban-sdk/testutils"]
