[package]
name = "withdrawal"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.4.0"

[dev-dependencies]
soroban-sdk = { version = "20.4.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
