[package]
name = "skillsync-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "skillsync_tools"
path = "src/lib.rs"

[[bin]]
name = "skillsync"
path = "src/main.rs"

[dependencies]
soroban-sdk = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dotenvy = "0.15"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
